crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__build_gradle_kts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

plugins {
    id("com.android.library") version "8.7.3"
    id("org.jetbrains.kotlin.android") version "2.0.21"
    `maven-publish`
}

group = "nested_modules"
version = "0.1.0"

android {
    namespace = "nested_modules"
    compileSdk = 35
    defaultConfig {
        minSdk = 21
        consumerProguardFiles("consumer-rules.pro")
    }
    // Builds libnested_modules_jni.so per ABI, linked against the producer library in
    // src/main/jniLibs/<abi>/ (see src/main/cpp/CMakeLists.txt).
    externalNativeBuild {
        cmake {
            path = file("src/main/cpp/CMakeLists.txt")
        }
    }
    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
    publishing {
        singleVariant("release") {
            withSourcesJar()
        }
    }
}

kotlin {
    compilerOptions {
        jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_1_8)
    }
}

publishing {
    publications {
        register<MavenPublication>("release") {
            artifactId = "nested_modules"
            afterEvaluate {
                from(components["release"])
            }
        }
    }
}

// END build.gradle.kts
