crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__consumer_rules_pro.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

# The JNI shim looks classes and methods up by name.
-keep class nested_modules.** { *; }

# END consumer-rules.pro
