crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__settings_gradle_kts.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

pluginManagement {
    repositories {
        google()
        mavenCentral()
        gradlePluginPortal()
    }
}

dependencyResolutionManagement {
    repositories {
        google()
        mavenCentral()
    }
}

rootProject.name = "nested_modules"

// END settings.gradle.kts
