crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_cpp_CMakeLists_txt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

cmake_minimum_required(VERSION 3.18)
project(nested_modules_jni C)

# The directory holding the producer library (libnested_modules). Android builds
# default to the per-ABI copy under src/main/jniLibs/.
set(NESTED_MODULES_LIBRARY_DIR "" CACHE PATH "Directory holding the nested_modules producer library")
if(NOT NESTED_MODULES_LIBRARY_DIR AND ANDROID)
    set(NESTED_MODULES_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}")
endif()
if(NESTED_MODULES_LIBRARY_DIR)
    find_library(NESTED_MODULES_PRODUCER NAMES nested_modules PATHS "${NESTED_MODULES_LIBRARY_DIR}" NO_DEFAULT_PATH NO_CMAKE_FIND_ROOT_PATH REQUIRED)
else()
    set(CMAKE_FIND_FRAMEWORK NEVER)
    find_library(NESTED_MODULES_PRODUCER NAMES nested_modules REQUIRED)
endif()

add_library(nested_modules_jni SHARED nested_modules_jni.c)
target_include_directories(nested_modules_jni PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(nested_modules_jni PRIVATE "${NESTED_MODULES_PRODUCER}")
if(NOT ANDROID)
    find_package(JNI REQUIRED)
    find_package(Threads REQUIRED)
    target_include_directories(nested_modules_jni PRIVATE ${JNI_INCLUDE_DIRS})
    target_link_libraries(nested_modules_jni PRIVATE Threads::Threads)
endif()

# END CMakeLists.txt
