crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_cpp_nested_modules_jni_c.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

#include <jni.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>
#include <string.h>

/* The shim forwards deprecated functions too, so it doesn't warn about them. */
#define NESTED_MODULES_DEPRECATED(msg)
#include "nested_modules.h"

/* Every static name in this file starts with `Jni_`, which no C ABI symbol
   (all lowercase `nested_modules_...`) and no JNI export (`Java_...`) can
   spell. */

static JavaVM* Jni_vm = NULL;
static jclass Jni_bridge = NULL;
static jmethodID Jni_error = NULL;

/* A borrowed view of a Kotlin `ByteArray`: strings, bytes, and value
   buffers all cross as one. */
typedef struct {
    jbyteArray array;
    jbyte* elems;
    const uint8_t* ptr;
    size_t len;
} Jni_bytes;

static inline Jni_bytes Jni_borrow_bytes(JNIEnv* env, jbyteArray array) {
    Jni_bytes b = {array, NULL, NULL, 0};
    if (array == NULL) {
        return b;
    }
    b.len = (size_t)(*env)->GetArrayLength(env, array);
    b.elems = (*env)->GetByteArrayElements(env, array, NULL);
    b.ptr = (const uint8_t*)b.elems;
    if (b.elems == NULL) {
        b.len = 0;
    }
    return b;
}

static inline void Jni_release_bytes(JNIEnv* env, Jni_bytes* b) {
    if (b->elems != NULL) {
        (*env)->ReleaseByteArrayElements(env, b->array, b->elems, JNI_ABORT);
    }
}

/* Copies `len` bytes into a new Kotlin `ByteArray` (never NULL for valid
   input, so NULL + 0 is the empty array). */
static inline jbyteArray Jni_new_bytes(JNIEnv* env, const uint8_t* ptr, size_t len) {
    jbyteArray out = (*env)->NewByteArray(env, (jsize)len);
    if (out != NULL && len > 0 && ptr != NULL) {
        (*env)->SetByteArrayRegion(env, out, 0, (jsize)len, (const jbyte*)ptr);
    }
    return out;
}

/* Copies a producer-owned allocation into a `ByteArray`, then frees it. */
static inline jbyteArray Jni_take_bytes(JNIEnv* env, const uint8_t* ptr, size_t len) {
    jbyteArray out = Jni_new_bytes(env, ptr, len);
    if (ptr != NULL) {
        nested_modules_free_bytes((uint8_t*)ptr, len);
    }
    return out;
}

/* Throws the Kotlin exception for `err` (mapped through domain `domain`,
   0 for the generic one) and clears `err`. */
static inline void Jni_throw(JNIEnv* env, nested_modules_error* err, jint domain) {
    const char* message = err->message != NULL ? err->message : "";
    jbyteArray text = Jni_new_bytes(env, (const uint8_t*)message, strlen(message));
    jbyteArray payload = NULL;
    if (err->payload_ptr != NULL) {
        payload = Jni_new_bytes(env, err->payload_ptr, err->payload_len);
    }
    jint code = (jint)err->code;
    nested_modules_error_clear(err);
    if ((*env)->ExceptionCheck(env)) {
        return;
    }
    jthrowable ex = (jthrowable)(*env)->CallStaticObjectMethod(env, Jni_bridge, Jni_error, domain, code, text, payload);
    if (ex != NULL && !(*env)->ExceptionCheck(env)) {
        (*env)->Throw(env, ex);
    }
}

static jint Jni_load_error(JNIEnv* env, const char* message) {
    jclass cls = (*env)->FindClass(env, "java/lang/UnsatisfiedLinkError");
    if (cls != NULL) {
        (*env)->ThrowNew(env, cls, message);
    }
    return JNI_ERR;
}

/* Generated below: the contract checks and the method IDs the shim caches. */
static jint Jni_load(JNIEnv* env);

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM* vm, void* reserved) {
    JNIEnv* env = NULL;
    (void)reserved;
    Jni_vm = vm;
    if ((*vm)->GetEnv(vm, (void**)&env, JNI_VERSION_1_6) != JNI_OK) {
        return JNI_ERR;
    }
    if (nested_modules_abi_version() != 3u) {
        return Jni_load_error(env, "nested_modules: the native library implements a different C ABI revision than these bindings (expected 3)");
    }
    jclass bridge = (*env)->FindClass(env, "nested_modules/JniBridge");
    if (bridge == NULL) {
        return JNI_ERR;
    }
    Jni_bridge = (jclass)(*env)->NewGlobalRef(env, bridge);
    Jni_error = (*env)->GetStaticMethodID(env, Jni_bridge, "error", "(II[B[B)Lnested_modules/FfiException;");
    if (Jni_error == NULL) {
        return JNI_ERR;
    }
    if (Jni_load(env) != JNI_OK) {
        return JNI_ERR;
    }
    return JNI_VERSION_1_6;
}

JNIEXPORT jlong JNICALL Java_nested_1modules_JniBridge_debug_1live(JNIEnv* env, jclass cls, jint kind) {
    (void)env;
    (void)cls;
    return (jlong)nested_modules_debug_live((int32_t)kind);
}

static jint Jni_load(JNIEnv* env) {
    (void)env;
    if (nested_modules_graphics_checksum() != UINT64_C(0x44d31b5b10fdb90d)) {
        return Jni_load_error(env, "nested_modules: module 'graphics' does not match these bindings (its contract checksum differs); regenerate the bindings or rebuild the library");
    }
    return JNI_OK;
}

JNIEXPORT jbyteArray JNICALL Java_nested_1modules_JniBridge_graphics_1new_1canvas(JNIEnv* env, jclass cls, jint p_width) {
    nested_modules_error err = {0, NULL, NULL, 0};
    (void)cls;
    size_t out_len = 0;
    const uint8_t* rv = nested_modules_graphics_new_canvas((int32_t)p_width, &out_len, &err);
    if (err.code != 0) {
        Jni_throw(env, &err, 0);
        return NULL;
    }
    return Jni_take_bytes(env, rv, out_len);
}

JNIEXPORT jbyteArray JNICALL Java_nested_1modules_JniBridge_graphics_1shapes_1make_1shape(JNIEnv* env, jclass cls, jint p_sides) {
    nested_modules_error err = {0, NULL, NULL, 0};
    (void)cls;
    size_t out_len = 0;
    const uint8_t* rv = nested_modules_graphics_shapes_make_shape((int32_t)p_sides, &out_len, &err);
    if (err.code != 0) {
        Jni_throw(env, &err, 0);
        return NULL;
    }
    return Jni_take_bytes(env, rv, out_len);
}

JNIEXPORT jbyteArray JNICALL Java_nested_1modules_JniBridge_graphics_1shapes_1describe(JNIEnv* env, jclass cls) {
    nested_modules_error err = {0, NULL, NULL, 0};
    (void)cls;
    size_t out_len = 0;
    const uint8_t* rv = nested_modules_graphics_shapes_describe(&out_len, &err);
    if (err.code != 0) {
        Jni_throw(env, &err, 0);
        return NULL;
    }
    return Jni_take_bytes(env, rv, out_len);
}

JNIEXPORT jbyteArray JNICALL Java_nested_1modules_JniBridge_graphics_1shapes_1geometry_1compute(JNIEnv* env, jclass cls, jbyteArray p_shape) {
    nested_modules_error err = {0, NULL, NULL, 0};
    (void)cls;
    Jni_bytes p_shape_b = Jni_borrow_bytes(env, p_shape);
    size_t out_len = 0;
    const uint8_t* rv = nested_modules_graphics_shapes_geometry_compute(p_shape_b.ptr, p_shape_b.len, &out_len, &err);
    Jni_release_bytes(env, &p_shape_b);
    if (err.code != 0) {
        Jni_throw(env, &err, 1);
        return NULL;
    }
    return Jni_take_bytes(env, rv, out_len);
}


// END nested_modules_jni.c
