crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_cpp_weaveffi_jni_c.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

#include <jni.h>
#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
#include <stdlib.h>
#include <string.h>
#include "weaveffi.h"

/* Copies `s` as a NUL-terminated standard UTF-8 string (JNI's modified
   UTF-8 would encode supplementary characters as surrogate pairs the
   producer rejects). Lone surrogates become U+FFFD. Release with free().
   Returns NULL for a NULL string, for a string holding U+0000 (which no
   C string can carry), or on allocation failure; the producer then
   reports the null argument through its marshalling error. */
static char* weaveffi_jni_string_to_utf8(JNIEnv* env, jstring s) {
    if (s == NULL) { return NULL; }
    jsize n = (*env)->GetStringLength(env, s);
    const jchar* u = (*env)->GetStringChars(env, s, NULL);
    if (u == NULL) { return NULL; }
    char* out = (char*)malloc((size_t)n * 4u + 1u);
    if (out == NULL) { (*env)->ReleaseStringChars(env, s, u); return NULL; }
    size_t o = 0;
    for (jsize i = 0; i < n; i++) {
        uint32_t c = u[i];
        if (c == 0u) { free(out); (*env)->ReleaseStringChars(env, s, u); return NULL; }
        if (c >= 0xD800u && c <= 0xDBFFu && i + 1 < n && u[i + 1] >= 0xDC00u && u[i + 1] <= 0xDFFFu) {
            c = 0x10000u + ((c - 0xD800u) << 10) + ((uint32_t)u[i + 1] - 0xDC00u);
            i++;
        }
        else if (c >= 0xD800u && c <= 0xDFFFu) { c = 0xFFFDu; }
        if (c < 0x80u) { out[o++] = (char)c; }
        else if (c < 0x800u) { out[o++] = (char)(0xC0u | (c >> 6)); out[o++] = (char)(0x80u | (c & 0x3Fu)); }
        else if (c < 0x10000u) { out[o++] = (char)(0xE0u | (c >> 12)); out[o++] = (char)(0x80u | ((c >> 6) & 0x3Fu)); out[o++] = (char)(0x80u | (c & 0x3Fu)); }
        else { out[o++] = (char)(0xF0u | (c >> 18)); out[o++] = (char)(0x80u | ((c >> 12) & 0x3Fu)); out[o++] = (char)(0x80u | ((c >> 6) & 0x3Fu)); out[o++] = (char)(0x80u | (c & 0x3Fu)); }
    }
    out[o] = 0;
    (*env)->ReleaseStringChars(env, s, u);
    return out;
}

/* Builds a jstring from standard UTF-8 (NewStringUTF expects modified UTF-8
   and mangles supplementary characters). NULL yields the empty string and
   a malformed sequence yields U+FFFD, so this never fails on producer
   output; it returns NULL only when the JVM could not allocate. */
static jstring weaveffi_jni_utf8_to_string(JNIEnv* env, const char* s) {
    if (s == NULL) { s = ""; }
    size_t n = strlen(s);
    jchar* buf = (jchar*)malloc((n + 1u) * sizeof(jchar));
    if (buf == NULL) { return NULL; }
    size_t i = 0, o = 0;
    while (i < n) {
        unsigned char b = (unsigned char)s[i];
        uint32_t c; size_t len;
        if (b < 0x80u) { c = b; len = 1; }
        else if ((b & 0xE0u) == 0xC0u) { c = b & 0x1Fu; len = 2; }
        else if ((b & 0xF0u) == 0xE0u) { c = b & 0x0Fu; len = 3; }
        else if ((b & 0xF8u) == 0xF0u) { c = b & 0x07u; len = 4; }
        else { c = 0xFFFDu; len = 1; }
        if (i + len > n) { c = 0xFFFDu; len = 1; }
        for (size_t k = 1; k < len; k++) {
            unsigned char cb = (unsigned char)s[i + k];
            if ((cb & 0xC0u) != 0x80u) { c = 0xFFFDu; len = k; break; }
            c = (c << 6) | (cb & 0x3Fu);
        }
        i += len;
        if (c > 0x10FFFFu) { c = 0xFFFDu; }
        if (c >= 0x10000u) { c -= 0x10000u; buf[o++] = (jchar)(0xD800u + (c >> 10)); buf[o++] = (jchar)(0xDC00u + (c & 0x3FFu)); }
        else { buf[o++] = (jchar)c; }
    }
    jstring out = (*env)->NewString(env, buf, (jsize)o);
    free(buf);
    return out;
}

static void throw_weaveffi_error(JNIEnv* env, weaveffi_error* err) {
    const char* msg = err->message ? err->message : "WeaveFFI error";
    jclass exClass = (*env)->FindClass(env, "com/weaveffi/WeaveFFIException");
    if (exClass != NULL) {
        jmethodID ctor = (*env)->GetMethodID(env, exClass, "<init>", "(ILjava/lang/String;)V");
        jstring jmsg = weaveffi_jni_utf8_to_string(env, msg);
        jthrowable ex = (jthrowable)(*env)->NewObject(env, exClass, ctor, (jint)err->code, jmsg);
        if (ex != NULL) { (*env)->Throw(env, ex); }
    }
    weaveffi_error_clear(err);
}

static void throw_weaveffi_graphics_GraphicsError(JNIEnv* env, weaveffi_error* err) {
    jclass exClass = (*env)->FindClass(env, "com/weaveffi/GraphicsException");
    jmethodID fromCode = exClass ? (*env)->GetStaticMethodID(env, exClass, "fromCode", "(ILjava/lang/String;[B)Lcom/weaveffi/WeaveFFIException;") : NULL;
    if (fromCode == NULL) {
        (*env)->ExceptionClear(env);
        throw_weaveffi_error(env, err);
        return;
    }
    const char* msg = err->message ? err->message : "WeaveFFI error";
    jstring jmsg = weaveffi_jni_utf8_to_string(env, msg);
    jbyteArray jpayload = NULL;
    if (err->payload_ptr != NULL) {
        jpayload = (*env)->NewByteArray(env, (jsize)err->payload_len);
        if (jpayload != NULL) { (*env)->SetByteArrayRegion(env, jpayload, 0, (jsize)err->payload_len, (const jbyte*)err->payload_ptr); }
    }
    jthrowable ex = (jthrowable)(*env)->CallStaticObjectMethod(env, exClass, fromCode, (jint)err->code, jmsg, jpayload);
    if (ex != NULL && !(*env)->ExceptionCheck(env)) { (*env)->Throw(env, ex); }
    weaveffi_error_clear(err);
}

static JavaVM* weaveffi_jni_vm = NULL;

static jint weaveffi_jni_load_error(JNIEnv* env, const char* message) {
    jclass cls = (*env)->FindClass(env, "java/lang/UnsatisfiedLinkError");
    if (cls != NULL) { (*env)->ThrowNew(env, cls, message); }
    return JNI_ERR;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM* vm, void* reserved) {
    (void)reserved;
    weaveffi_jni_vm = vm;
    JNIEnv* env = NULL;
    if ((*vm)->GetEnv(vm, (void**)&env, JNI_VERSION_1_6) != JNI_OK) { return JNI_ERR; }
    if (weaveffi_abi_version() != 2u) {
        return weaveffi_jni_load_error(env, "WeaveFFI: the native library implements a different C ABI revision than these bindings (expected 2)");
    }
    return JNI_VERSION_1_6;
}

JNIEXPORT jbyteArray JNICALL Java_com_weaveffi_WeaveFFI_newCanvasJni(JNIEnv* env, jclass clazz, jint width) {
    weaveffi_error err = {0, NULL, NULL, 0};
    size_t out_len = 0;
    const uint8_t* rv = weaveffi_graphics_new_canvas((int32_t)width, &out_len, &err);
    if (err.code != 0) {
        throw_weaveffi_error(env, &err);
        return NULL;
    }
    jbyteArray out = (*env)->NewByteArray(env, (jsize)out_len);
    if (out && rv) { (*env)->SetByteArrayRegion(env, out, 0, (jsize)out_len, (const jbyte*)rv); }
    weaveffi_free_bytes((uint8_t*)rv, (size_t)out_len);
    return out;
}

JNIEXPORT jbyteArray JNICALL Java_com_weaveffi_WeaveFFI_makeShapeJni(JNIEnv* env, jclass clazz, jint sides) {
    weaveffi_error err = {0, NULL, NULL, 0};
    size_t out_len = 0;
    const uint8_t* rv = weaveffi_graphics_shapes_make_shape((int32_t)sides, &out_len, &err);
    if (err.code != 0) {
        throw_weaveffi_error(env, &err);
        return NULL;
    }
    jbyteArray out = (*env)->NewByteArray(env, (jsize)out_len);
    if (out && rv) { (*env)->SetByteArrayRegion(env, out, 0, (jsize)out_len, (const jbyte*)rv); }
    weaveffi_free_bytes((uint8_t*)rv, (size_t)out_len);
    return out;
}

JNIEXPORT jbyteArray JNICALL Java_com_weaveffi_WeaveFFI_describeJni(JNIEnv* env, jclass clazz) {
    weaveffi_error err = {0, NULL, NULL, 0};
    size_t out_len = 0;
    const uint8_t* rv = weaveffi_graphics_shapes_describe(&out_len, &err);
    if (err.code != 0) {
        throw_weaveffi_error(env, &err);
        return NULL;
    }
    jbyteArray out = (*env)->NewByteArray(env, (jsize)out_len);
    if (out && rv) { (*env)->SetByteArrayRegion(env, out, 0, (jsize)out_len, (const jbyte*)rv); }
    weaveffi_free_bytes((uint8_t*)rv, (size_t)out_len);
    return out;
}

JNIEXPORT jbyteArray JNICALL Java_com_weaveffi_WeaveFFI_computeJni(JNIEnv* env, jclass clazz, jbyteArray shape) {
    weaveffi_error err = {0, NULL, NULL, 0};
    jbyte* shape_elems = (*env)->GetByteArrayElements(env, shape, NULL);
    jsize shape_len = (*env)->GetArrayLength(env, shape);
    size_t out_len = 0;
    const uint8_t* rv = weaveffi_graphics_shapes_geometry_compute((const uint8_t*)shape_elems, (size_t)shape_len, &out_len, &err);
    (*env)->ReleaseByteArrayElements(env, shape, shape_elems, JNI_ABORT);
    if (err.code != 0) {
        throw_weaveffi_graphics_GraphicsError(env, &err);
        return NULL;
    }
    jbyteArray out = (*env)->NewByteArray(env, (jsize)out_len);
    if (out && rv) { (*env)->SetByteArrayRegion(env, out, 0, (jsize)out_len, (const jbyte*)rv); }
    weaveffi_free_bytes((uint8_t*)rv, (size_t)out_len);
    return out;
}


// END weaveffi_jni.c
