crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_kotlin_com_weaveffi_WeaveFFI_kt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

package com.weaveffi

class WeaveFFI {
    companion object {
        init { WeaveNativeLibrary.ensureLoaded() }

        /**
         * Construct a Canvas.
         */
        @JvmStatic private external fun newCanvasJni(width: Int): ByteArray
        @JvmStatic fun newCanvas(width: Int): Canvas = weaveDecode(newCanvasJni(width)) { r -> unpackCanvas(r) }
        /**
         * Construct a Shape.
         */
        @JvmStatic private external fun makeShapeJni(sides: Int): ByteArray
        @JvmStatic fun makeShape(sides: Int): Shape = weaveDecode(makeShapeJni(sides)) { r -> unpackShape(r) }
        /**
         * Nested function returning a struct owned by an ancestor module.
         */
        @JvmStatic private external fun describeJni(): ByteArray
        @JvmStatic fun describe(): Canvas = weaveDecode(describeJni()) { r -> unpackCanvas(r) }
        /**
         * Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.
         */
        @JvmStatic private external fun computeJni(shape: ByteArray): ByteArray
        @JvmStatic fun compute(shape: Shape): Detail = weaveDecode(computeJni(weaveEncode { w -> packShape(w, shape) })) { r -> unpackDetail(r) }
    }
}

/** A measurement unit shared with nested submodules. */
enum class Unit(val value: Int) {
    pixels(0),
    points(1);

    companion object {
        fun fromValue(value: Int): Unit = entries.first { it.value == value }
    }
}

/** Top-level struct that references a struct defined one level deeper. */
data class Canvas(
    val width: Int,
    /** Reference down into a nested module */
    val root: Shape,
)

internal fun packCanvas(w: WeaveBufferWriter, v: Canvas) {
    w.writeI32(v.width)
    packShape(w, v.root)
}

internal fun unpackCanvas(r: WeaveBufferReader): Canvas = Canvas(
    r.readI32(),
    unpackShape(r),
)

/** A struct one level deep that references both an ancestor enum and a deeper struct. */
data class Shape(
    val sides: Int,
    /** Reference up to the parent module's enum */
    val unit: Unit,
    /** Reference down into a deeper module */
    val detail: Detail,
)

internal fun packShape(w: WeaveBufferWriter, v: Shape) {
    w.writeI32(v.sides)
    w.writeI32(v.unit.value)
    packDetail(w, v.detail)
}

internal fun unpackShape(r: WeaveBufferReader): Shape = Shape(
    r.readI32(),
    Unit.fromValue(r.readI32()),
    unpackDetail(r),
)

/** A struct two levels deep. */
data class Detail(val area: Double)

internal fun packDetail(w: WeaveBufferWriter, v: Detail) {
    w.writeF64(v.area)
}

internal fun unpackDetail(r: WeaveBufferReader): Detail = Detail(
    r.readF64(),
)

/** Generic WeaveFFI failure: panics, marshalling errors, callback implementation failures (code -4), and unknown codes. */
open class WeaveFFIException(val code: Int, message: String) : Exception(message)

/** Typed error domain `GraphicsError` declared by module `graphics`. */
sealed class GraphicsException(code: Int, message: String) : WeaveFFIException(code, message) {
    class OutOfBounds(message: String = "coordinate out of bounds") : GraphicsException(1, message)

    companion object {
        /** Map a raw `GraphicsError` code and payload to the typed exception; unknown codes yield the generic [WeaveFFIException]. */
        @JvmStatic fun fromCode(code: Int, message: String, payload: ByteArray?): WeaveFFIException = when (code) {
            1 -> OutOfBounds(message)
            else -> WeaveFFIException(code, message)
        }
    }
}

/** Loads the native library once; every companion `init` calls [ensureLoaded]. */
internal object WeaveNativeLibrary {
    init { System.loadLibrary("weaveffi") }

    fun ensureLoaded() {}
}

/** Growable little-endian writer implementing the WeaveFFI value-buffer wire format. */
internal class WeaveBufferWriter {
    private var buf = ByteArray(32)
    private var len = 0

    private fun reserve(extra: Int) {
        if (len + extra <= buf.size) return
        var cap = buf.size * 2
        while (cap < len + extra) cap *= 2
        buf = buf.copyOf(cap)
    }

    fun toByteArray(): ByteArray = buf.copyOf(len)

    fun writeBool(v: Boolean) { reserve(1); buf[len++] = if (v) 1 else 0 }
    fun writeI8(v: Byte) { reserve(1); buf[len++] = v }
    fun writeI16(v: Short) {
        reserve(2)
        val b = v.toInt()
        buf[len++] = (b and 0xFF).toByte()
        buf[len++] = ((b shr 8) and 0xFF).toByte()
    }
    fun writeI32(v: Int) {
        reserve(4)
        buf[len++] = (v and 0xFF).toByte()
        buf[len++] = ((v shr 8) and 0xFF).toByte()
        buf[len++] = ((v shr 16) and 0xFF).toByte()
        buf[len++] = ((v shr 24) and 0xFF).toByte()
    }
    fun writeU32(v: Long) = writeI32(v.toInt())
    fun writeI64(v: Long) {
        writeI32(v.toInt())
        writeI32((v ushr 32).toInt())
    }
    fun writeF32(v: Float) = writeI32(v.toRawBits())
    fun writeF64(v: Double) = writeI64(v.toRawBits())
    fun writeString(v: String) = writeBytes(v.toByteArray(Charsets.UTF_8))
    fun writeBytes(v: ByteArray) {
        writeI32(v.size)
        reserve(v.size)
        v.copyInto(buf, len)
        len += v.size
    }
    fun <T> writeOptional(v: T?, write: (T) -> Unit) {
        if (v == null) writeBool(false) else { writeBool(true); write(v) }
    }
    fun <T> writeList(v: List<T>, write: (T) -> Unit) {
        writeI32(v.size)
        for (e in v) write(e)
    }
    fun <K, V> writeMap(v: Map<K, V>, writeKey: (K) -> Unit, writeValue: (V) -> Unit) {
        writeI32(v.size)
        for ((k, e) in v) { writeKey(k); writeValue(e) }
    }
}

/** Validating little-endian reader for the WeaveFFI value-buffer wire format. */
internal class WeaveBufferReader(private val buf: ByteArray) {
    private var pos = 0

    private fun malformed(detail: String): Nothing =
        throw WeaveFFIException(-2, "malformed WeaveFFI value buffer: " + detail)

    private fun take(n: Int): Int {
        if (n > buf.size - pos) malformed("truncated buffer")
        val at = pos
        pos += n
        return at
    }

    fun readBool(): Boolean = when (buf[take(1)].toInt()) {
        0 -> false
        1 -> true
        else -> malformed("invalid bool byte")
    }
    fun readI8(): Byte = buf[take(1)]
    fun readI16(): Short {
        val at = take(2)
        return ((buf[at].toInt() and 0xFF) or ((buf[at + 1].toInt() and 0xFF) shl 8)).toShort()
    }
    fun readI32(): Int {
        val at = take(4)
        return (buf[at].toInt() and 0xFF) or
            ((buf[at + 1].toInt() and 0xFF) shl 8) or
            ((buf[at + 2].toInt() and 0xFF) shl 16) or
            ((buf[at + 3].toInt() and 0xFF) shl 24)
    }
    fun readU32(): Long = readI32().toLong() and 0xFFFFFFFFL
    fun readI64(): Long {
        val lo = readI32().toLong() and 0xFFFFFFFFL
        val hi = readI32().toLong()
        return lo or (hi shl 32)
    }
    fun readF32(): Float = Float.fromBits(readI32())
    fun readF64(): Double = Double.fromBits(readI64())
    /** An object token: one strong reference the caller adopts. Zero is never valid here. */
    fun readObject(): Long {
        val token = readI64()
        if (token == 0L) malformed("null object token")
        return token
    }
    private fun readLen(): Int {
        val n = readI32()
        if (n < 0 || n > buf.size - pos) malformed("length prefix exceeds remaining bytes")
        return n
    }
    fun readString(): String {
        val n = readLen()
        val at = take(n)
        return try {
            Charsets.UTF_8.newDecoder().decode(java.nio.ByteBuffer.wrap(buf, at, n)).toString()
        } catch (e: java.nio.charset.CharacterCodingException) {
            malformed("string is not valid UTF-8")
        }
    }
    fun readBytes(): ByteArray {
        val n = readLen()
        val at = take(n)
        return buf.copyOfRange(at, at + n)
    }
    fun <T> readOptional(read: () -> T): T? = if (readBool()) read() else null
    fun <T> readList(read: () -> T): List<T> {
        val n = readLen()
        val out = ArrayList<T>(n)
        repeat(n) { out.add(read()) }
        return out
    }
    fun <K, V> readMap(readKey: () -> K, readValue: () -> V): Map<K, V> {
        val n = readLen()
        val out = LinkedHashMap<K, V>()
        repeat(n) { out[readKey()] = readValue() }
        return out
    }
    fun expectEnd() {
        if (pos != buf.size) malformed("trailing bytes after value")
    }
}

internal fun weaveEncode(write: (WeaveBufferWriter) -> Unit): ByteArray {
    val w = WeaveBufferWriter()
    write(w)
    return w.toByteArray()
}

internal fun <T> weaveDecode(bytes: ByteArray, read: (WeaveBufferReader) -> T): T {
    val r = WeaveBufferReader(bytes)
    val v = read(r)
    r.expectEnd()
    return v
}

// END WeaveFFI.kt
