crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_kotlin_nested_modules_Buffers_kt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

package nested_modules

/**
 * Growable little-endian writer for the value-buffer wire format that
 * records, rich enums, optionals, lists, and maps cross the ABI in.
 */
internal class BufferWriter {
    private var buf = ByteArray(64)
    private var len = 0
    private var minted: ArrayList<Pair<Long, (Long) -> Unit>>? = null

    private fun reserve(extra: Int) {
        if (len + extra <= buf.size) return
        var cap = buf.size * 2
        while (cap < len + extra) cap *= 2
        buf = buf.copyOf(cap)
    }

    fun toByteArray(): ByteArray = buf.copyOf(len)

    fun writeBool(v: Boolean) {
        reserve(1)
        buf[len++] = if (v) 1 else 0
    }

    fun writeI8(v: Byte) {
        reserve(1)
        buf[len++] = v
    }

    fun writeU8(v: Byte) = writeI8(v)

    fun writeI16(v: Short) {
        reserve(2)
        val b = v.toInt()
        buf[len++] = b.toByte()
        buf[len++] = (b shr 8).toByte()
    }

    fun writeU16(v: Short) = writeI16(v)

    fun writeI32(v: Int) {
        reserve(4)
        buf[len++] = v.toByte()
        buf[len++] = (v shr 8).toByte()
        buf[len++] = (v shr 16).toByte()
        buf[len++] = (v shr 24).toByte()
    }

    fun writeU32(v: Long) = writeI32(v.toInt())

    fun writeI64(v: Long) {
        writeI32(v.toInt())
        writeI32((v ushr 32).toInt())
    }

    fun writeU64(v: Long) = writeI64(v)

    fun writeF32(v: Float) = writeI32(v.toRawBits())

    fun writeF64(v: Double) = writeI64(v.toRawBits())

    fun writeString(v: String) = writeBytes(encodeUtf8(v))

    fun writeBytes(v: ByteArray) {
        writeI32(v.size)
        reserve(v.size)
        v.copyInto(buf, len)
        len += v.size
    }

    /**
     * An object token: one new strong reference the reader adopts, which
     * [abandon] releases with [release] if the encoding fails.
     */
    fun writeObject(token: Long, release: (Long) -> Unit) {
        val list = minted ?: ArrayList<Pair<Long, (Long) -> Unit>>().also { minted = it }
        list.add(token to release)
        writeI64(token)
    }

    /** Releases every object token written so far, for an encoding that failed midway. */
    fun abandon() {
        minted?.forEach { (token, release) -> release(token) }
        minted = null
    }

    inline fun <T> writeOptional(v: T?, write: (T) -> Unit) {
        if (v == null) {
            writeBool(false)
        } else {
            writeBool(true)
            write(v)
        }
    }

    inline fun <T> writeList(v: List<T>, write: (T) -> Unit) {
        writeI32(v.size)
        for (e in v) write(e)
    }

    inline fun <K, V> writeMap(v: Map<K, V>, writeKey: (K) -> Unit, writeValue: (V) -> Unit) {
        writeI32(v.size)
        for ((k, e) in v) {
            writeKey(k)
            writeValue(e)
        }
    }
}

/**
 * Validating little-endian reader for the value-buffer wire format. A
 * truncated buffer, an invalid flag byte, a zero object token, an oversized
 * length, or trailing bytes raise [FfiException] code -3.
 */
internal class BufferReader(private val buf: ByteArray) {
    private var pos = 0

    private fun malformed(detail: String): Nothing =
        throw FfiException(-3, "malformed value buffer: $detail")

    private fun take(n: Int): Int {
        if (n > buf.size - pos) malformed("truncated buffer")
        val at = pos
        pos += n
        return at
    }

    fun readBool(): Boolean = when (buf[take(1)].toInt()) {
        0 -> false
        1 -> true
        else -> malformed("invalid bool byte")
    }

    fun readI8(): Byte = buf[take(1)]

    fun readU8(): Byte = readI8()

    fun readI16(): Short {
        val at = take(2)
        return ((buf[at].toInt() and 0xFF) or ((buf[at + 1].toInt() and 0xFF) shl 8)).toShort()
    }

    fun readU16(): Short = readI16()

    fun readI32(): Int {
        val at = take(4)
        return (buf[at].toInt() and 0xFF) or
            ((buf[at + 1].toInt() and 0xFF) shl 8) or
            ((buf[at + 2].toInt() and 0xFF) shl 16) or
            ((buf[at + 3].toInt() and 0xFF) shl 24)
    }

    fun readU32(): Long = readI32().toLong() and 0xFFFFFFFFL

    fun readI64(): Long {
        val lo = readI32().toLong() and 0xFFFFFFFFL
        val hi = readI32().toLong()
        return lo or (hi shl 32)
    }

    fun readU64(): Long = readI64()

    fun readF32(): Float = Float.fromBits(readI32())

    fun readF64(): Double = Double.fromBits(readI64())

    private fun readLen(): Int {
        val n = readI32()
        if (n < 0 || n > buf.size - pos) malformed("length prefix exceeds remaining bytes")
        return n
    }

    fun readString(): String {
        val n = readLen()
        val at = take(n)
        return try {
            Charsets.UTF_8.newDecoder().decode(java.nio.ByteBuffer.wrap(buf, at, n)).toString()
        } catch (e: java.nio.charset.CharacterCodingException) {
            malformed("string is not valid UTF-8")
        }
    }

    fun readBytes(): ByteArray {
        val n = readLen()
        val at = take(n)
        return buf.copyOfRange(at, at + n)
    }

    /** An object token: one strong reference the caller adopts. */
    fun readObject(): Long {
        val token = readI64()
        if (token == 0L) malformed("null object token")
        return token
    }

    inline fun <T> readOptional(read: () -> T): T? = if (readBool()) read() else null

    inline fun <T> readList(read: () -> T): List<T> {
        val n = readCount()
        val out = ArrayList<T>(minOf(n, 4096))
        repeat(n) { out.add(read()) }
        return out
    }

    inline fun <K, V> readMap(readKey: () -> K, readValue: () -> V): Map<K, V> {
        val n = readCount()
        val out = LinkedHashMap<K, V>(minOf(n, 4096))
        repeat(n) {
            val k = readKey()
            out[k] = readValue()
        }
        return out
    }

    /** An element count; elements may encode to zero bytes, so only the sign is checked. */
    fun readCount(): Int {
        val n = readI32()
        if (n < 0) malformed("negative element count")
        return n
    }

    fun expectEnd() {
        if (pos != buf.size) malformed("trailing bytes after value")
    }
}

/** Encodes one value into a fresh value buffer. */
internal inline fun encodeBuffer(write: (BufferWriter) -> Unit): ByteArray {
    val w = BufferWriter()
    try {
        write(w)
    } catch (t: Throwable) {
        w.abandon()
        throw t
    }
    return w.toByteArray()
}

/** Decodes one value from [bytes], rejecting malformed or trailing bytes. */
internal inline fun <T> decodeBuffer(bytes: ByteArray, read: (BufferReader) -> T): T {
    val r = BufferReader(bytes)
    val v = read(r)
    r.expectEnd()
    return v
}

// END Buffers.kt
