crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_kotlin_nested_modules_Graphics_kt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

package nested_modules

/** Errors of the `GraphicsError` domain. */
sealed class GraphicsException(code: Int, message: String) : FfiException(code, message) {
    class OutOfBounds(message: String = "coordinate out of bounds") : GraphicsException(1, message)

    internal companion object {
        /** The exception for a raw code and its serialized payload. */
        fun fromCode(code: Int, message: String, payload: ByteArray?): FfiException = when (code) {
            1 -> OutOfBounds(message)
            else -> FfiException(code, message)
        }
    }
}

/** A measurement unit shared with nested submodules. */
enum class Unit_(val value: Int) {
    pixels(0),
    points(1);

    companion object {
        /** The variant whose ABI value is [value]. */
        fun fromValue(value: Int): Unit_ = entries.firstOrNull { it.value == value }
            ?: throw FfiException(-3, "unknown Unit_ value $value")
    }
}

/** Top-level struct that references a struct defined one level deeper. */
data class Canvas(
    val width: Int,
    /** Reference down into a nested module */
    val root: Shape,
)

internal fun packCanvas(_w: BufferWriter, _v: Canvas) {
    _w.writeI32(_v.width)
    packShape(_w, _v.root)
}

internal fun unpackCanvas(_r: BufferReader): Canvas = Canvas(
    _r.readI32(),
    unpackShape(_r),
)

/** A struct one level deep that references both an ancestor enum and a deeper struct. */
data class Shape(
    val sides: Int,
    /** Reference up to the parent module's enum */
    val unit: Unit_,
    /** Reference down into a deeper module */
    val detail: Detail,
)

internal fun packShape(_w: BufferWriter, _v: Shape) {
    _w.writeI32(_v.sides)
    _w.writeI32(_v.unit.value)
    packDetail(_w, _v.detail)
}

internal fun unpackShape(_r: BufferReader): Shape = Shape(
    _r.readI32(),
    Unit_.fromValue(_r.readI32()),
    unpackDetail(_r),
)

/** A struct two levels deep. */
data class Detail(val area: Double)

internal fun packDetail(_w: BufferWriter, _v: Detail) {
    _w.writeF64(_v.area)
}

internal fun unpackDetail(_r: BufferReader): Detail = Detail(
    _r.readF64(),
)

object Graphics {
    /** Construct a Canvas. */
    fun newCanvas(width: Int): Canvas = decodeBuffer(JniBridge.graphics_new_canvas(width)) { _r -> unpackCanvas(_r) }

    object Shapes {
        /** Construct a Shape. */
        fun makeShape(sides: Int): Shape = decodeBuffer(JniBridge.graphics_shapes_make_shape(sides)) { _r -> unpackShape(_r) }

        /** Nested function returning a struct owned by an ancestor module. */
        fun describe(): Canvas = decodeBuffer(JniBridge.graphics_shapes_describe()) { _r -> unpackCanvas(_r) }

        object Geometry {
            /** Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain. */
            fun compute(shape: Shape): Detail = decodeBuffer(JniBridge.graphics_shapes_geometry_compute(encodeBuffer { _w -> packShape(_w, shape) })) { _r -> unpackDetail(_r) }
        }
    }
}

// END Graphics.kt
