crates/weaveffi-cli/tests/snapshots/kotlin_nested_modules__src_main_kotlin_nested_modules_JniBridge_kt.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION]
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate

package nested_modules

/**
 * The JNI entry points of `libnested_modules_jni`: one native per C symbol, named after
 * it, plus the hooks the shim calls back into. Internal plumbing for the
 * public wrappers.
 */
internal object JniBridge {
    init {
        NativeLibrary.ensureLoaded()
    }

    /**
     * The exception for a native failure: through error domain [domain] for a
     * throwing call, or a [NativeBugException] (domain 0) for one that can't fail.
     */
    @JvmStatic
    fun error(domain: Int, code: Int, message: ByteArray, payload: ByteArray?): Throwable {
        val text = decodeUtf8(message)
        return when (domain) {
            1 -> GraphicsException.fromCode(code, text, payload)
            else -> NativeBugException(code, text)
        }
    }

    @JvmStatic external fun debug_live(kind: Int): Long
    @JvmStatic external fun graphics_new_canvas(width: Int): ByteArray
    @JvmStatic external fun graphics_shapes_make_shape(sides: Int): ByteArray
    @JvmStatic external fun graphics_shapes_describe(): ByteArray
    @JvmStatic external fun graphics_shapes_geometry_compute(shape: ByteArray): ByteArray
}

// END JniBridge.kt
